--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -4,24 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ClassroomActivity"
+    android:background="@drawable/screen"
     android:orientation="vertical"
-    android:background="@drawable/screen">
+    tools:context=".ClassroomActivity">
 
     <!--Linear Layout Avatar & Home shortcut -->
     <LinearLayout
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp">
 
         <!-- Avatar -->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/avatar" />
+            android:layout_marginStart="15dp"
+            android:src="@drawable/avatar"
+            tools:ignore="ContentDescription" />
 
 
         <!-- Information & Home shortcut -->
@@ -33,8 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                tools:ignore="RelativeOverlap">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -57,7 +59,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
-                android:src="@drawable/home" />
+                android:paddingBottom="5dp"
+                android:src="@drawable/home"
+                tools:ignore="ContentDescription" />
         </RelativeLayout>
         <!-- End Information & Home shortcut -->
     </LinearLayout>
@@ -65,7 +69,7 @@
 
 
 
-    <!-- Student List & 2 buttons -->
+    <!-- Student Table -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -78,7 +82,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F7F7F7">
+            android:background="@color/white">
 
             <TextView
                 android:layout_gravity="center"
@@ -91,30 +95,32 @@
 
 
             <EditText
-                android:layout_gravity="center"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/border"
                 android:hint="@string/search"
-                android:textSize="16sp"
+                android:inputType="text"
                 android:textAlignment="center"
-                android:textStyle="italic" />
+                android:textSize="16sp"
+                android:textStyle="italic"
+                android:autofillHints="" />
         </LinearLayout>
         <!--  End Student Classroom title & search bar -->
 
 
+        <!-- Student List -->
         <LinearLayout
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="10dp">
 
-            <!-- Title Student Table -->
-
-
+            <!-- Title Table -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -122,72 +128,47 @@
                 android:paddingTop="10dp"
                 android:text="@string/student_table_title_infomation"
                 android:textColor="@color/black" />
-            <!-- End Title Student Table -->
+            <!-- End Title Table -->
 
             <!-- List View -->
-            <!-- Student Information -->
-            <LinearLayout
-                android:orientation="horizontal"
+            <ListView
+                android:id="@+id/classroomListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:divider="@color/black"
+                android:dividerHeight="1sp" />
+            <!-- End List View -->
 
-                <!-- Avatar -->
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:paddingTop="10dp"
-                    android:src="@drawable/avatar2" />
-
-                <!-- Information -->
-                <LinearLayout
-                    android:layout_marginStart="5dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp">
-
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/teacherName"
-                        android:textColor="@color/black"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/teacherClassroom"
-                        android:textColor="#5D5D5D" />
-                </LinearLayout>
-                <!-- End Information -->
-
-            </LinearLayout>
-            <!-- Student Information -->
         </LinearLayout>
+        <!-- End Student List -->
 
+
+        <!-- Button -->
         <LinearLayout
-            android:orientation="vertical"
+            android:layout_weight="0"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <Button
-                android:layout_gravity="center"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:backgroundTint="@android:color/holo_green_dark"
-                android:text="@string/student_table_button_add"
-                />
+                android:text="@string/student_table_button_add" />
 
             <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_gravity="center"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
                 android:text="@string/student_table_button_export" />
-
         </LinearLayout>
+        <!-- End Button -->
 
     </LinearLayout>
-    <!-- Student List & 2 buttons -->
+    <!-- End Student Table -->
+
+
 </LinearLayout>
