--- a/app/src/main/res/layout/activity_classroom_element.xml
+++ b/app/src/main/res/layout/activity_classroom_element.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/studentAvatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:paddingTop="10dp"
-        android:src="@drawable/avatar2"
+        android:src="@drawable/avatar3"
         tools:ignore="ContentDescription" />
 
     <!-- Information -->
@@ -20,6 +21,7 @@
         android:layout_height="60dp">
 
         <TextView
+            android:id="@+id/studentName"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/studentGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/teacherClassroom"
