04-04-2022 dựng màn hình thông tin sinh viên

--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -152,21 +152,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/classroomButtonCreation"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@android:color/holo_blue_dark"
-                android:text="@string/student_table_button_add" />
+                android:background="@drawable/button_background_1"
+                android:text="@string/student_table_button_add"
+                style="@style/button_style" />
 
-            <Button
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/button_style"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/holo_red_dark"
                 android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background_2"
                 android:text="@string/student_table_button_export" />
         </LinearLayout>
         <!-- End Button -->
