--- a/app/src/main/res/layout/confirm_alert.xml
+++ b/app/src/main/res/layout/confirm_alert.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#ffffff">
@@ -30,9 +31,10 @@
                 android:layout_margin="30dp"
                 android:textSize="22sp"
                 android:id="@+id/msgText"
-                android:text="This is a popup window."
+                android:text="@string/popupContent"
                 android:layout_gravity="center"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                tools:ignore="ObsoleteLayoutParam" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/btnOK"
                     android:layout_gravity="center"
-                    android:text="OK"/>
+                    android:text="@string/OK"/>
                 <Space
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -54,7 +56,7 @@
                     android:id="@+id/btnCancel"
                     android:layout_gravity="center"
                     android:backgroundTint="@color/teal_200"
-                    android:text="Cancel"/>
+                    android:text="@string/Cancel"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
