--- a/app/src/main/res/layout/confirm_alert.xml
+++ b/app/src/main/res/layout/confirm_alert.xml
@@ -1,64 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#ffffff">
+    android:orientation="vertical"
+    android:background="#ffffff"
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp">
 
-    <androidx.cardview.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="3dp">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp">
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp">
-            <ImageView
+            android:background="@drawable/info_icon"
+            android:id="@+id/iconAlert"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="15dp"
+            android:textSize="22sp"
+            android:id="@+id/msgText"
+            android:text="@string/popupContent"
+            android:layout_gravity="center"
+            android:textAlignment="center" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/button_primary_style"
+                android:id="@+id/btnOK"
+                android:text="@string/OK"/>
+            <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/info_icon"
-                android:id="@+id/iconAlert"
-                android:layout_gravity="center"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_margin="30dp"
-                android:textSize="22sp"
-                android:id="@+id/msgText"
-                android:text="@string/popupContent"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                tools:ignore="ObsoleteLayoutParam" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/btnOK"
-                    android:layout_gravity="center"
-                    android:text="@string/OK"/>
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="60dp"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/btnCancel"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/teal_200"
-                    android:text="@string/Cancel"/>
-            </LinearLayout>
+                android:minWidth="30dp"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/button_secondary_style"
+                android:id="@+id/btnCancel"
+                android:text="@string/Cancel"/>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </RelativeLayout>
