--- a/app/src/main/res/layout/normal_alert.xml
+++ b/app/src/main/res/layout/normal_alert.xml
@@ -4,42 +4,34 @@
     android:layout_height="wrap_content"
     android:background="#ffffff">
 
-        <androidx.cardview.widget.CardView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp">
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="3dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="20dp"
-                android:paddingTop="20dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/check_icon"
-                    android:id="@+id/iconAlert"
-                    android:layout_gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_margin="30dp"
-                    android:textSize="22sp"
-                    android:id="@+id/msgText"
-                    android:text="This is a popup window."
-                    android:layout_gravity="center"
-                    android:textAlignment="center"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/btnOK"
-                    android:layout_gravity="center"
-                    android:text="OK"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            android:background="@drawable/check_icon"
+            android:id="@+id/iconAlert"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="15dp"
+            android:textSize="22sp"
+            android:id="@+id/msgText"
+            android:text="This is a popup window."
+            android:layout_gravity="center"
+            android:textAlignment="center"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="150dp"
+            style="@style/button_primary_style"
+            android:id="@+id/btnOK"
+            android:text="OK"/>
+    </LinearLayout>
 
 </RelativeLayout>
