06-04-2022 kiểm tra dữ liệu đầu vào & home menu

--- a/app/src/main/res/layout/activity_classroom_creation.xml
+++ b/app/src/main/res/layout/activity_classroom_creation.xml
@@ -135,7 +135,8 @@
                         android:layout_marginTop="10dp"
                         android:background="@drawable/border"
                         android:hint="@string/familyNameHint"
-                        android:inputType="text"
+
+                        android:inputType="textPersonName"
                         android:textAlignment="center"
                         tools:ignore="Autofill" />
                 </LinearLayout>
