--- a/app/src/main/res/layout/activity_classroom_individual.xml
+++ b/app/src/main/res/layout/activity_classroom_individual.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/screen"
-    tools:context=".ClassroomIndividualActivity">
+    tools:context=".Classroom.ClassroomIndividualActivity">
 
 
     <ImageView
