--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -159,6 +159,7 @@
                 style="@style/button_style" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/classroomButtonExport"
                 style="@style/button_style"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
