tách phần avatar, tên giáo viên, mã id ở trên đầu ứng dụng thành Reuse View. Sau đó ở mỗi view thì ta include vào. Đồng thời tạo thêm cái loadData ở mỗi view để load hiện thị thông tin giáo viên đang đăng nhập

--- a/app/src/main/res/layout/activity_statistic_row.xml
+++ b/app/src/main/res/layout/activity_statistic_row.xml
@@ -22,6 +22,7 @@
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:text="Xếp loại"
+                android:id="@+id/titleStatistic"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -37,6 +38,7 @@
             android:text="Xem thống kê một lớp ở học kỳ nhất định có bao nhiêu học sinh giỏi, khá,... theo bảng điểm đã có "
             android:textColor="@color/black"
             android:textStyle="italic"
+            android:id="@+id/textStatistic"
             android:textSize="16sp" />
 
     </LinearLayout>
