--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,68 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
     android:orientation="vertical"
-    android:background="@drawable/screen"
-    android:padding="20dp">
+    android:background="@drawable/screen">
+
+    <include
+        android:id="@+id/topBar"
+        layout="@layout/topbar_menu"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/avatar" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:id="@+id/info"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/txtNameGV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nguyễn Thị Thuỷ"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:id="@+id/txtIDGV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Mã GV: 1"
-                    android:textColor="#B9B9B9"
-                    android:textSize="20dp"
-                    android:textStyle="italic"/>
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/buttonHomeMenu"
-                android:layout_width="46dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/menu" />
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="50dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="100dp"
@@ -140,16 +89,11 @@
         </LinearLayout>
     </LinearLayout>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="50dp"/>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="100dp"
