--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/screen"
     tools:context=".Statistic.StatisticActivity">
 
-    <ListView
-        android:id="@+id/lvDanhSach"
+    <include
+        android:id="@+id/topBar"
+        layout="@layout/topbar_home" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="570dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/rectangle_6"
+        android:orientation="vertical"
+        android:padding="30dp">
+
+        <ListView
+            android:id="@+id/lvListStatistic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
