--- a/app/src/main/res/layout/fragment_top_bar_menu_icon.xml
+++ b/app/src/main/res/layout/fragment_top_bar_menu_icon.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="20dp"
-    tools:context=".Statistic.StatisticActivity">
+    tools:context=".TopBarMenuIconFragment">
 
     <ImageView
         android:layout_width="70dp"
@@ -45,12 +44,13 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/btnHomeMenu"
+            android:id="@+id/btnMenu"
             android:layout_width="37dp"
             android:layout_height="35dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/menu" />
     </RelativeLayout>
+
 
 </LinearLayout>
