--- a/app/src/main/res/layout/activity_statistic_row.xml
+++ b/app/src/main/res/layout/activity_statistic_row.xml
@@ -43,10 +43,12 @@
 
     </LinearLayout>
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center_vertical"
+        android:background="@color/white"
         android:src="@drawable/edit_btn" />
 </LinearLayout>
