--- a/app/src/main/res/layout/activity_gender_stats.xml
+++ b/app/src/main/res/layout/activity_gender_stats.xml
@@ -43,6 +43,14 @@
                 android:layout_height="match_parent"
                 />
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
+
+
             <androidx.appcompat.widget.AppCompatButton
                 style="@style/button_blue_style"
                 android:text="@string/classroomExportButtonPDF"
