--- a/app/src/main/res/layout/activity_mark_stats.xml
+++ b/app/src/main/res/layout/activity_mark_stats.xml
@@ -37,7 +37,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.anychart.AnyChartView
+                android:id="@+id/any_chart_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 style="@style/button_blue_style"
