--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -19,20 +19,22 @@
         <!--End Linear Layout Avatar & Home shortcut -->
 
 
-        <!-- Student Table -->
+        <!-- Subject Table -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rectangle_6"
             android:orientation="vertical"
+
             android:paddingTop="10dp">
 
-            <!-- Student Classroom title & search bar -->
+            <!--  Classroom title & search bar -->
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white">
+                >
 
                 <TextView
                     android:layout_gravity="center"
@@ -58,10 +60,10 @@
                     android:textStyle="italic"
                     android:autofillHints="" />
             </LinearLayout>
-            <!--  End Student Classroom title & search bar -->
+            <!--  End Subject Classroom title & search bar -->
 
 
-            <!-- Student List -->
+            <!-- Subject List -->
             <LinearLayout
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -91,7 +93,7 @@
                 <!-- End List View -->
 
             </LinearLayout>
-            <!-- End Student List -->
+            <!-- End Subject List -->
 
 
             <!-- Button -->
@@ -118,7 +120,7 @@
             <!-- End Button -->
 
         </LinearLayout>
-        <!-- End Student Table -->
+        <!-- End Subject Table -->
 
 
     </LinearLayout>
